deployment_canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motd-deployment-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: motd
  template:
    metadata:
      labels:
        app: motd
    spec:
      containers:
      - name: motd
        image: bassiroud/motd-api:v1.1.1
        ports:
        - containerPort: 80
