ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motd-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ahmadou-diallo.amnay.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: motd-service
            port:
              number: 80
